# aegis-antifraud

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/aegis/: __init__.py  config.py  main.py
backend/aegis/api/: __init__.py  admin.py  analytics.py  auth.py  callbacks.py  deps.py  scoring.py
backend/aegis/core/: __init__.py  logging.py  metrics.py  middleware.py
backend/aegis/cp/: __init__.py  client.py
backend/aegis/db/: __init__.py  migrate.py  postgres.py  redis.py
backend/aegis/features/: __init__.py  device_info.py  extract.py  ip_intel.py  schema.py
backend/aegis/fingerprint/: __init__.py  cache.py  device_id.py  service.py
backend/aegis/jobs/: __init__.py  backfill_olap_mirror.py  retrain.py
backend/aegis/ml/: __init__.py  inference.py  isolation_forest.py  lightgbm_model.py  loader.py  store.py  train.py
backend/aegis/registry/: __init__.py  campaign.py  countries.py  errors.py  service.py
backend/aegis/schemas/: __init__.py  admin.py  analytics.py  callback.py  common.py  cp.py  scoring.py
backend/aegis/scoring/: __init__.py  blend.py  config.py  engine.py  explain.py  rules.py
backend/aegis/security/: __init__.py  cors.py  crypto.py  hmac_auth.py  jwt_auth.py  origins.py  passwords.py  ratelimit.py  tokens.py
backend/aegis/services/: __init__.py  feedback.py  labeling.py  maturation.py  velocity.py
backend/scripts/: seed_feed_demo.py
backend/tests/: conftest.py
backend/tests/contract/: test_callback_contract.py  test_scoring_contract.py
(+166 files in other folders)
