[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.3.1"
description = "Aegis Anti Fraud — scoring API, ML, dan retraining"
requires-python = ">=3.13,<3.14"
dependencies = [
  # API (TRD §2)
  "fastapi~=0.136.0",
  "uvicorn[standard]~=0.49.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  # Datastores
  "psycopg[binary]~=3.2",
  "clickhouse-connect~=0.8",
  "redis~=5.2",
  # ML (TRD §2)
  "scikit-learn~=1.9.0",
  "lightgbm~=4.6.0",
  "numpy>=2.1,<3.0",
  "pandas>=2.2,<3.0",
  # Keamanan & util
  "pyjwt~=2.9",
  "passlib[argon2]~=1.7",
  "httpx~=0.27",
  "cryptography>=43,<45",
  # Observability
  "prometheus-client~=0.21",
  # IP intelligence (TQ-07: GeoLite2 + IP2Proxy LITE)
  "geoip2~=4.8",
  "IP2Proxy~=3.4",
]

[project.optional-dependencies]
dev = [
  "ruff~=0.7",
  "pytest~=8.3",
  "pytest-asyncio~=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Idiom FastAPI: dependency/param sebagai default argumen bukan mutable-default sungguhan.
extend-immutable-calls = [
  "fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header",
  "fastapi.Body", "fastapi.Form", "fastapi.File",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
